# rusty-quest

./: AGENTS.md  Cargo.toml  README.md
apps/direct-p2p-provider-android/native/: Cargo.toml
apps/direct-p2p-provider-android/native/src/: lib.rs
apps/fleet-agent-android/native/: Cargo.toml
apps/fleet-agent-android/native/src/: lib.rs
apps/kuramoto-spatial-sdk-android/native-receipt/: Cargo.toml  build.rs
apps/kuramoto-spatial-sdk-android/native-receipt/shaders/: camera_hwb_probe.frag.glsl  camera_hwb_probe.vert.glsl  replay_hands.frag.glsl  replay_hands.vert.glsl  surface_particles.comp.glsl  surface_particles.frag.glsl  surface_particles.vert.glsl
apps/kuramoto-spatial-sdk-android/native-receipt/src/: camera_hwb_probe.rs  lib.rs  live_hand_joint_bridge.rs  live_hand_joints.rs  replay_hands.rs  surface_particle_layer.rs
apps/manifold-broker-android/native/: Cargo.toml
apps/manifold-broker-android/native/src/: admission_jni.rs  lib.rs
apps/native-renderer-android/native/: Cargo.toml  build.rs
apps/native-renderer-android/native/shaders/: camera_luma_diagnostic.comp.glsl  camera_projection.frag.glsl  camera_projection.vert.glsl  display_composite_feedback.frag.glsl  display_composite_recursive_feedback.frag.glsl  environment_depth_particles.frag.glsl  environment_depth_particles.vert.glsl  environment_depth_particles_meta.comp.glsl  environment_depth_particles_synthetic.comp.glsl  gpu_hand_skinning.comp.glsl  gpu_sdf_field.comp.glsl  gpu_sdf_overlay.frag.glsl  gpu_sdf_tile_bins.comp.glsl  guide_blur_5tap.frag.glsl  guide_blur_downsample.frag.glsl  guide_projection.frag.glsl  guide_video_projection.frag.glsl  hand_anchor_particles.frag.glsl  hand_anchor_particles.vert.glsl  hand_anchor_particles_sort.comp.glsl  hand_mesh_visual.frag.glsl  hand_mesh_visual.vert.glsl  private_kuramoto_particles_placeholder.comp.glsl  private_particles.frag.glsl  private_particles.vert.glsl  private_particles_offscreen_composite.frag.glsl  private_particles_sort.comp.glsl  stimulus_volume_projection.frag.glsl  stimulus_volume_projection.vert.glsl  stimulus_volume_raymarch.comp.glsl  video_projection.frag.glsl
apps/native-renderer-android/native/src/: acamera_sys.rs  ahardware_buffer_vulkan.rs  android_events.rs  android_hardware_buffer.rs  camera_projection.rs  camera_projection_metadata.rs  display_composite_capture_export.rs  display_composite_feedback.rs  display_composite_native_stream.rs  display_composite_projection_metadata.rs  embedded_manifold_broker_bridge.rs  embedded_manifold_runtime_authority_jni.rs  environment_depth_alignment_state.rs  environment_depth_geometry.rs  environment_depth_projection_alignment.rs  environment_depth_scene_map.rs  environment_depth_surface_support.rs  gpu_environment_depth_particle_stats.rs  gpu_environment_depth_particles.rs  gpu_hand_anchor_particles.rs  gpu_hand_mesh_visual.rs  gpu_mesh_replay.rs  gpu_private_particles.rs  gpu_sdf_field.rs  gpu_stimulus_volume.rs  guide_blur_graph.rs  hand_adapter_consumer.rs  hand_mesh_graft.rs  lib.rs  live_hand_compact.rs  live_hand_joint_capture.rs  live_hand_mesh_capture.rs  lsl_android.rs  lsl_transport_bridge.rs  manifold_breath_bridge.rs  manifold_pose_publisher.rs  manifold_scalar_driver_bridge.rs  native_app_settings.rs  native_camera.rs  native_camera_metadata.rs  (+36 more)
apps/native-renderer-android/native/src/xr_vulkan/: replay_visual_stats.rs  scorecard.rs
crates/rusty-quest-broker-admission/: Cargo.toml
crates/rusty-quest-broker-admission/src/: lib.rs
crates/rusty-quest-broker-authority/: Cargo.toml
crates/rusty-quest-broker-authority/src/: lib.rs  runtime.rs
crates/rusty-quest-broker-client/: Cargo.toml
crates/rusty-quest-broker-client/android/io/github/mesmerprism/rustyquest/broker_client/: BrokerClientProbeActivity.java  BrokerRequestNamespace.java
crates/rusty-quest-broker-client/src/: lib.rs  media_lifecycle.rs
crates/rusty-quest-broker-client/tests/java/io/github/mesmerprism/rustyquest/broker_client/: BrokerRequestNamespaceTest.java
crates/rusty-quest-broker-contracts/: Cargo.toml
crates/rusty-quest-broker-contracts/src/: lib.rs
crates/rusty-quest-broker-product/: Cargo.toml
crates/rusty-quest-broker-product/src/: lib.rs
crates/rusty-quest-feature-activation/: Cargo.toml
crates/rusty-quest-feature-activation/src/: lib.rs
crates/rusty-quest-fleet-agent/: Cargo.toml
crates/rusty-quest-fleet-agent/src/: lib.rs
crates/rusty-quest-hand-adapter/: Cargo.toml
crates/rusty-quest-hand-adapter/src/: lib.rs  lock_bound_activation.rs
crates/rusty-quest-media-stream/: Cargo.toml
crates/rusty-quest-media-stream/src/: failure_recovery.rs  lib.rs  model.rs  product_runtime.rs  runtime.rs  validation.rs
crates/rusty-quest-particle-adapter/: Cargo.toml
crates/rusty-quest-particle-adapter/src/: lib.rs  lock_bound_activation.rs
crates/rusty-quest-peer-session-adapter/: Cargo.toml
crates/rusty-quest-peer-session-adapter/src/: lib.rs  peer_mesh.rs
crates/rusty-quest-projection-runtime-config/: Cargo.toml
crates/rusty-quest-projection-runtime-config/src/: lib.rs
crates/rusty-quest-qcl-evidence-adapter/: Cargo.toml
crates/rusty-quest-qcl-evidence-adapter/src/: lib.rs
crates/rusty-quest-remote-camera/: Cargo.toml
crates/rusty-quest-remote-camera/src/: lib.rs  media_stream.rs  model.rs  packed_stream.rs  profile.rs  validation.rs
docs/: APK_RUN_ISOLATION.md  ARCHITECTURE.md  BROKER_ADMISSION.md  BROKER_PACKAGING.md  BROKER_RUNTIME_AUTHORITY.md  CORRECTED_RELEASE_TWO_QUEST_MATRIX.md  FEATURE_ACTIVATION.md  FLEET_AGENT.md  HAND_TRACKING_VISUALIZATION_APK_AUDIT.md  MEDIA_SESSION_RUNTIME.md  MEDIA_STREAM_RUNTIME.md  NATIVE_APP_BUILD_WORKFLOW.md  NATIVE_CAMERA_QUALITY_ITERATION_PLAN.md  NATIVE_QUEST_RENDERING.md  NATIVE_STIMULUS_VOLUME_IMPLEMENTATION.md  NATIVE_VIDEO_BORDER_BLEND_MODES.md  NATIVE_VIDEO_PROJECTION.md  N_PEER_MESH.md  REMOTE_CAMERA_STREAMING.md  SPATIAL_CAMERA_MOTION_ITERATION_REPORT.md  SPATIAL_CAMERA_PRESENTATION_TIME_PLAN.md  SPATIAL_LAYERING_CARRIER_PROBE_PLAN.md  SPATIAL_ROOM_WORLDSPACE_ITERATION_LOG.md  SPATIAL_SDK_PORT_IMPLEMENTATION_PLAN.md  (+5 more)
(+776 files in other folders)
