[workspace]
members = [
    "apps/spatial-camera-panel-android/native-receipt",
    "apps/native-renderer-android/native",
    "crates/rusty-quest-native-renderer",
    "crates/rusty-quest-projection-runtime-config",
    "crates/rusty-quest-profile",
    "crates/rusty-quest-remote-camera",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Till Holzapfel"]
license = "AGPL-3.0-or-later"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
