[package]
name = "rusty-quest-broker-admission"
description = "Android Binder caller projection over Manifold cross-app admission authority."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rusty-manifold-admission = { path = "../../../rusty-manifold/crates/rusty-manifold-admission" }
rusty-manifold-model = { path = "../../../rusty-manifold/crates/rusty-manifold-model", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
