[package]
name = "rusty-quest-broker-authority"
description = "Quest process/JNI projection over the shared Manifold broker adapter authority path."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rusty-manifold-broker-adapter = { path = "../../../rusty-manifold/crates/rusty-manifold-broker-adapter" }
rusty-manifold-broker-product = { path = "../../../rusty-manifold/crates/rusty-manifold-broker-product" }
rusty-manifold-model = { path = "../../../rusty-manifold/crates/rusty-manifold-model", features = ["serde"] }
rusty-manifold-runtime-host = { path = "../../../rusty-manifold/crates/rusty-manifold-runtime-host" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
