[package]
name = "rusty-quest-broker-client"
description = "Shared source-only client specs and evidence contracts for independent Quest broker consumers."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
