[package]
name = "rusty-quest-broker-client"
description = "Shared source-only client specs and evidence contracts for independent Quest broker consumers."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
rusty-manifold-broker-product = { path = "../../../rusty-manifold/crates/rusty-manifold-broker-product" }
rusty-manifold-media-session = { path = "../../../rusty-manifold/crates/rusty-manifold-media-session" }
rusty-manifold-runtime-host = { path = "../../../rusty-manifold/crates/rusty-manifold-runtime-host" }
rusty-quest-broker-contracts = { path = "../rusty-quest-broker-contracts" }
rusty-quest-media-stream = { path = "../rusty-quest-media-stream" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
rusty-quest-media-stream = { path = "../rusty-quest-media-stream", features = ["test-support"] }

[lints]
workspace = true
