[package]
name = "rusty-quest-broker-contracts"
description = "Neutral source-only broker client and media lifecycle package contracts."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
rusty-manifold-broker-product = { path = "../../../rusty-manifold/crates/rusty-manifold-broker-product" }
rusty-manifold-media-session = { path = "../../../rusty-manifold/crates/rusty-manifold-media-session" }
rusty-quest-media-stream = { path = "../rusty-quest-media-stream" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[lints]
workspace = true
