[package]
name = "rusty-quest-broker-product"
description = "Thin Android permission projection for Manifold broker product locks."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rusty-manifold-broker-product = { path = "../../../rusty-manifold/crates/rusty-manifold-broker-product" }
rusty-manifold-model = { path = "../../../rusty-manifold/crates/rusty-manifold-model", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
