[package]
name = "rusty-quest-hand-adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Provider-neutral Quest adapter over Lattice, Matter, and Optics hand contracts."

[dependencies]
rusty-lattice-model = { path = "../../../rusty-lattice/crates/rusty-lattice-model" }
rusty-matter-mesh = { path = "../../../rusty-matter/crates/rusty-matter-mesh", features = ["serde"] }
rusty-matter-model = { path = "../../../rusty-matter/crates/rusty-matter-model", features = ["serde"] }
rusty-optics-model = { path = "../../../rusty-optics/crates/rusty-optics-model", features = ["serde"] }
rusty-quest-feature-activation = { path = "../rusty-quest-feature-activation" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rusty-quest-particle-adapter = { path = "../rusty-quest-particle-adapter" }

[lints]
workspace = true
