[package]
name = "rusty-quest-media-stream"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rusty-quest-device-link = { path = "../rusty-quest-device-link" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
