[package]
name = "rusty-quest-media-stream"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
test-support = []

[dependencies]
rusty-manifold-media-session = { path = "../../../rusty-manifold/crates/rusty-manifold-media-session" }
rusty-manifold-model = { path = "../../../rusty-manifold/crates/rusty-manifold-model", features = ["serde"] }
rusty-manifold-peer-runtime-host = { path = "../../../rusty-manifold/crates/rusty-manifold-peer-runtime-host" }
rusty-quest-device-link = { path = "../rusty-quest-device-link" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[lints]
workspace = true
