[package]
name = "rusty-quest-projection-runtime-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT"
rust-version.workspace = true
description = "Runtime configuration helpers for Rusty Quest projection lanes."

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[lints.clippy]
all = "warn"
pedantic = "warn"
