[package]
name = "rusty-quest-qcl-evidence-adapter"
description = "Explicit QCL compatibility adapter into generic Quest media evidence."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
rusty-quest-broker-client = { path = "../rusty-quest-broker-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[lints]
workspace = true
