[package]
name = "rusty-quest-remote-camera"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rusty-quest-device-link = { path = "../rusty-quest-device-link" }
rusty-quest-profile = { path = "../rusty-quest-profile" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
