[package]
name = "kuramoto-spatial-native-receipt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "No-render JNI receipt probe for Spatial SDK to Rust native interop."
build = "build.rs"

[lib]
name = "kuramoto_spatial_native_receipt"
crate-type = ["cdylib"]

[dependencies]
ash = "0.38"
libc = "0.2"
openxr-sys = "0.13.1"
serde_json = "1"
jni = "0.21"

[lints.rust]
unsafe_code = "allow"
missing_docs = "allow"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
