[package]
name = "rusty-quest-native-renderer-android-native"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"
publish = false
description = "Rust-owned Quest NativeActivity renderer scaffold for camera HWB blur projection."

[lib]
name = "rusty_quest_native_renderer"
crate-type = ["cdylib", "rlib"]

[dependencies]
rusty-quest-native-renderer-contracts = { package = "rusty-quest-native-renderer", path = "../../../crates/rusty-quest-native-renderer" }
rusty-quest-particle-adapter = { path = "../../../crates/rusty-quest-particle-adapter" }
rusty-quest-hand-adapter = { path = "../../../crates/rusty-quest-hand-adapter" }
rusty-quest-broker-authority = { path = "../../../crates/rusty-quest-broker-authority" }
serde_json = "1"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6.1", features = ["native-activity"] }
android-properties = "0.2"
ash = "0.38"
jni = "0.22"
ndk-sys = "0.6"
openxr = "0.21.1"

[lints.rust]
unsafe_code = "allow"
missing_docs = "allow"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
